// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template List Components Actions should render correct actions when not published 1`] = `
<div
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <Popover
    bottom={true}
    left={true}
    right={true}
    trigger={
      <Button
        flat={true}
        size="default"
      >
        <MoreHoriz
          size={20}
        />
      </Button>
    }
  >
    <ActionList
      actions={
        Array [
          Object {
            "component": [Function],
            "content": "Edit",
            "to": "/templates/edit/10?subaccount=101",
          },
          Object {
            "component": [Function],
            "content": "Preview",
            "to": "/templates/preview/10?subaccount=101",
            "visible": true,
          },
          Object {
            "component": [Function],
            "content": "Preview",
            "to": "/templates/preview/10/published?subaccount=101",
            "visible": false,
          },
        ]
      }
      groupByKey="section"
    />
  </Popover>
</div>
`;

exports[`Template List Components Actions should render correct actions when published 1`] = `
<div
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <Popover
    bottom={true}
    left={true}
    right={true}
    trigger={
      <Button
        flat={true}
        size="default"
      >
        <MoreHoriz
          size={20}
        />
      </Button>
    }
  >
    <ActionList
      actions={
        Array [
          Object {
            "component": [Function],
            "content": "Edit",
            "to": "/templates/edit/10?subaccount=101",
          },
          Object {
            "component": [Function],
            "content": "Preview",
            "to": "/templates/preview/10?subaccount=101",
            "visible": false,
          },
          Object {
            "component": [Function],
            "content": "Preview",
            "to": "/templates/preview/10/published?subaccount=101",
            "visible": true,
          },
        ]
      }
      groupByKey="section"
    />
  </Popover>
</div>
`;

exports[`Template List Components Actions should render correct actions with unpublished changes 1`] = `
<div
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <Popover
    bottom={true}
    left={true}
    right={true}
    trigger={
      <Button
        flat={true}
        size="default"
      >
        <MoreHoriz
          size={20}
        />
      </Button>
    }
  >
    <ActionList
      actions={
        Array [
          Object {
            "component": [Function],
            "content": "Edit Saved Draft",
            "to": "/templates/edit/10?subaccount=101",
          },
          Object {
            "component": [Function],
            "content": "Preview Saved Draft",
            "to": "/templates/preview/10?subaccount=101",
            "visible": true,
          },
          Object {
            "component": [Function],
            "content": "Preview Published",
            "to": "/templates/preview/10/published?subaccount=101",
            "visible": true,
          },
        ]
      }
      groupByKey="section"
    />
  </Popover>
</div>
`;

exports[`Template List Components LastUpdated should render 1`] = `
<p
  className="LastUpdated"
>
  Aug 10 2017, 10:15am
</p>
`;

exports[`Template List Components Name should render 1`] = `
<Fragment>
  <p
    className="Name"
  >
    <Link
      replace={false}
      to="/templates/edit/id-123?subaccount=123"
    >
      <strong>
        template name
      </strong>
    </Link>
  </p>
  <p
    className="Id"
  >
    <em>
      ID: 
      id-123
    </em>
  </p>
</Fragment>
`;

exports[`Template List Components Status should render draft 1`] = `
<Tag>
  Draft
</Tag>
`;

exports[`Template List Components Status should render published 1`] = `
<Tag
  color="blue"
>
  Published
</Tag>
`;

exports[`Template List Components Status should render unpublished changes 1`] = `
<Tooltip
  bottom={true}
  content="Contains unpublished changes"
  dark={true}
  forcePosition={false}
  horizontalOffset="0px"
  preferredDirection={
    Object {
      "bottom": true,
      "left": false,
      "right": true,
      "top": false,
    }
  }
  right={true}
>
  <Tag
    color="blue"
  >
    Published •
  </Tag>
</Tooltip>
`;
